--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amsthm, amssymb}
+\newtheorem{hpst}{Thorem}[section]
+\newtheorem{hil}[hpst]{Lemma}
 \begin{document}
-\input{il.tex}
+\input{hpst.tex}
 \end{document}
