Going home from the lab.

--- a/model/mios.tex
+++ b/model/mios.tex
@@ -10,7 +10,7 @@ $\mathscr{E}[\mathtt{tl}\;(^{[T]}MH^{[T]}\;(\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2})
 $\mathscr{E}[^{N}MS\;\overline{n}]_{M}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
 $\mathscr{E}[^{N}MS\;v_{S}]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{N}MS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;number"})]$ \\
 && $(v_{S}\neq\overline{n}$ for any $\overline{n})$ \\
-$\mathscr{E}[(^{\forall X.T_{1}}MS\;v_{S})\;\lbrace T_{2}\rbrace]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[X/T^{a}_{2}]}MS\;v_{S}]$ \\
+$\mathscr{E}[(^{\forall X.T_{1}}MS\;v_{S})\;\lbrace T_{2}\rbrace]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}MS\;v_{S}]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS\;(\lambda x_{1}.e_{S})]_{M}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}MS\;((\lambda x_{1}.e_{S})\;(SM^{T_{1}}\;x_{2})))]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS\;v_{S}]_{M}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}\rightarrow T_{2}}MS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;function"})]$ \\
 && $(v_{S}\neq\lambda x.e_{S}$ for any $x,e_{S})$ \\
