--- a/proof/hil.tex
+++ b/proof/hil.tex
@@ -1,4 +1,5 @@
 \begin{hil}
+\label{hil}
 Inversion of the Haskell typing relation.
 \begin{enumerate}
 \item If $\vdash_{H}\overline{n}:T$ then $T=N$.
