--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,7 +1,28 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amsthm, amssymb}
 \newtheorem{hpst}{Thorem}[section]
+\newtheorem{mpst}{Thorem}[section]
+\newtheorem{spst}{Thorem}[section]
 \newtheorem{hil}[hpst]{Lemma}
+\newtheorem{huotl}[hpst]{Lemma}
+\newtheorem{hcf}[hpst]{Lemma}
+\newtheorem{mil}[mpst]{Lemma}
+\newtheorem{muotl}[mpst]{Lemma}
+\newtheorem{mcf}[mpst]{Lemma}
+\newtheorem{sil}[spst]{Lemma}
+\newtheorem{suotl}[spst]{Lemma}
+\newtheorem{scf}[spst]{Lemma}
 \begin{document}
+\section{Haskell}
 \input{hpst.tex}
+\input{huotl.tex}
+\input{hcf.tex}
+\section{ML}
+\input{mpst.tex}
+\input{muotl.tex}
+\input{mcf.tex}
+\section{Scheme}
+\input{spst.tex}
+\input{suotl.tex}
+\input{scf.tex}
 \end{document}
