--- a/model/sct.tex
+++ b/model/sct.tex
@@ -4,7 +4,7 @@
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $x\;\vert\;v_{S}\;\vert\;e_{S}\;e_{S}\;\vert\;\mathtt{if0}\;e_{S}\;e_{S}\;e_{S}\;\vert\;\mathtt{cons}\;e_{S}\;e_{S}\;\vert\;o\;e_{S}\;e_{S}\;\vert\;f\;e_{S}\;\vert\;p\;e_{S}\;\vert\;\mathtt{wrong}\;\mathrm{string}$ \\
 $x$ & $=$ & Variables \\
-$v_{S}$ & $=$ & $\lambda x.e_{S}\;\vert\;\mathtt{cons}\;v_{S}\;v_{S}\;\vert\;\overline{n}$ \\
+$v_{S}$ & $=$ & $\lambda x.e_{S}\;\vert\;\mathtt{cons}\;v_{S}\;v_{S}\;\vert\;\mathtt{nil}\;\vert\;\overline{n}$ \\
 $o$ & $=$ & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
 $f$ & $=$ & $\mathtt{hd}\;\vert\;\mathtt{tl}$ \\
 $p$ & $=$ & $\mathtt{nat?}\;\vert\;\mathtt{list?}\;\vert\;\mathtt{proc?}$ \\
