--- a/proof/mps.tex
+++ b/proof/mps.tex
@@ -1,4 +1,4 @@
-\begin{mpst}
+\begin{mps}
+\label{mps}
 If $\Gamma\vdash_{M}e_{M}:T$ then there exists an $e_{M}'$ such that $e_{M}\rightarrow e_{M}'$ or $e_{M}\rightarrow$ \emph{\textbf{Error}:\;string}.
-\end{mpst}
-\input{mil.tex}
+\end{mps}
