--- a/proof/si.tex
+++ b/proof/si.tex
@@ -1,5 +1,5 @@
-\begin{sil}
-\label{sil}
+\begin{si}
+\label{si}
 Inversion of the Scheme typing relation.
 \begin{enumerate}
 \item If $\vdash_{S}\overline{n}:T$ then $T=TST$.
@@ -19,4 +19,4 @@ Inversion of the Scheme typing relation.
 \begin{proof}
 Immediate from the definition of the Scheme typing relation.
 \end{proof}
-\end{sil}
+\end{si}
