--- a/proof/sps.tex
+++ b/proof/sps.tex
@@ -1,4 +1,3 @@
-\begin{spst}
+\begin{sps}
 If $\Gamma\vdash_{S}e_{S}:T$ then there exists an $e_{S}'$ such that $e_{S}\rightarrow e_{S}'$ or $e_{S}\rightarrow$ \emph{\textbf{Error}:\;string}.
-\end{spst}
-\input{sil.tex}
+\end{sps}
