--- a/proof/hcf.tex
+++ b/proof/hcf.tex
@@ -1,10 +1,15 @@
 \begin{hcf}
 \label{hcf}
-Canonical forms.
+The canonical form of the normal form for each Haskell type.
 \begin{enumerate}
-\item If $e_{H}$ is an expression of type $N$ then $e_{H}$ is a numeric
+\item If $e_{H}$ is a normal form of type $N$ then $e_{H}=\overline{n}$.
+\item If $e_{H}$ is a normal form of type $T_{1}\rightarrow T_{2}$ then $e_{H}=\lambda x:T_{1}.e_{H}$.
+\item If $e_{H}$ is a normal form of type $\forall X.T$ then $e_{H}=\Lambda X.e_{H}$ or $e_{H}=\;^{\forall X.T}HS\;v_{S}$.
+\item If $e_{H}$ is a normal form of type $[T]$ then $e_{H}=\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}$.
+\item If $e_{H}$ is a normal form of type $L$ then $e_{H}=\;^{L}HS\;v_{S}$.
 \end{enumerate}
 \begin{proof}
-
+[???] Straightforward from the definition of Haskell normal forms and the definition of the Haskell typing relation.
+%For part (1), according to the typing rules in Figure \ref{mctr}, the only normal form of type $N$ is $\overline{n}$.  For part (2), 
 \end{proof}
 \end{hcf}
