--- a/proof/hi.tex
+++ b/proof/hi.tex
@@ -1,11 +1,11 @@
-\begin{hil}
-\label{hil}
 Inversion of the Haskell typing relation.
+\begin{hi}
+\label{hi}
 \begin{enumerate}
 \item If $\vdash_{H}\overline{n}:T$ then $T=N$.
 \item If $\Gamma\vdash_{H}x:T$ then $x:T\in\Gamma$.
-\item If $\Gamma\vdash_{H}\lambda x:T_{1}.e_{H}:T$ then $\Gamma\vdash_{H}T_{1}$, $(\Gamma,x:T_{1}\vdash_{H}e_{H}:T_{2})$, and $T=T_{1}\rightarrow T_{2}$.
-\item If $\Gamma\vdash_{H}\Lambda X.e_{H}:T$ then $(\Gamma,X\vdash_{H}e_{H}:T_{1})$ and $T=\forall X.T_{1}$.
+\item If $\Gamma\vdash_{H}\lambda x:T_{1}.e_{H}:T$ then $\Gamma\vdash_{H}T_{1}$, $\Gamma,x:T_{1}\vdash_{H}e_{H}:T_{2}$, and $T=T_{1}\rightarrow T_{2}$.
+\item If $\Gamma\vdash_{H}\Lambda X.e_{H}:T$ then $\Gamma,X\vdash_{H}e_{H}:T_{1}$ and $T=\forall X.T_{1}$.
 \item If $\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:T$ then $\Gamma\vdash_{H}e_{H}^{1}:T_{1}$, $\Gamma\vdash_{H}e_{H}^{2}:[T_{1}]$, and $T=[T_{1}]$.
 \item If $\Gamma\vdash_{H}\mathtt{nil}:T$ then $T=\forall X.[X]$.
 \item If $\Gamma\vdash_{H}e_{H}^{1}\;e_{H}^{2}:T$ then $\Gamma\vdash_{H}e_{H}^{1}:T_{1}\rightarrow T_{2}$, $\Gamma\vdash_{H}e_{H}^{2}:T_{1}$, and $T=T_{2}$.
@@ -21,4 +21,4 @@ Inversion of the Haskell typing relation.
 \begin{proof}
 Immediate from the definition of the Haskell typing relation.
 \end{proof}
-\end{hil}
+\end{hi}
