--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,28 +1,32 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amsthm, amssymb}
-\newtheorem{hpst}{Thorem}[section]
-\newtheorem{mpst}{Thorem}[section]
-\newtheorem{spst}{Thorem}[section]
-\newtheorem{hil}[hpst]{Lemma}
-\newtheorem{huotl}[hpst]{Lemma}
-\newtheorem{hcf}[hpst]{Lemma}
-\newtheorem{mil}[mpst]{Lemma}
-\newtheorem{muotl}[mpst]{Lemma}
-\newtheorem{mcf}[mpst]{Lemma}
-\newtheorem{sil}[spst]{Lemma}
-\newtheorem{suotl}[spst]{Lemma}
-\newtheorem{scf}[spst]{Lemma}
+\newtheorem{hps}{Thorem}[section]
+\newtheorem{hi}[hps]{Lemma}
+\newtheorem{huot}[hps]{Lemma}
+\newtheorem{hcf}[hps]{Lemma}
+\newtheorem{mps}{Thorem}[section]
+\newtheorem{mi}[mps]{Lemma}
+\newtheorem{muot}[mps]{Lemma}
+\newtheorem{mcf}[mps]{Lemma}
+\newtheorem{sps}{Thorem}[section]
+\newtheorem{si}[sps]{Lemma}
+\newtheorem{suot}[sps]{Lemma}
+\newtheorem{scf}[sps]{Lemma}
 \begin{document}
 \section{Haskell}
-\input{hpst.tex}
-\input{huotl.tex}
+Progress will be proven first.  
+\input{hps.tex}
+\input{hi.tex}
+\input{huot.tex}
 \input{hcf.tex}
 \section{ML}
-\input{mpst.tex}
-\input{muotl.tex}
+\input{mps.tex}
+\input{mi.tex}
+\input{muot.tex}
 \input{mcf.tex}
 \section{Scheme}
-\input{spst.tex}
-\input{suotl.tex}
+\input{sps.tex}
+\input{si.tex}
+\input{suot.tex}
 \input{scf.tex}
 \end{document}
