Finished both apps for H progress proof.

--- a/proof/hi.tex
+++ b/proof/hi.tex
@@ -1,6 +1,6 @@
-Inversion of the Haskell typing relation.
 \begin{hi}
 \label{hi}
+\mbox{}
 \begin{enumerate}
 \item If $\vdash_{H}\overline{n}:T$ then $T=N$.
 \item If $\Gamma\vdash_{H}x:T$ then $x:T\in\Gamma$.
