--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,6 +1,18 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amsthm, amssymb}
 \newtheorem{hps}{Thorem}[section]
+\newtheorem*{hps-case-1}{Case 1}
+\newtheorem*{hps-case-2}{Case 2}
+\newtheorem*{hps-case-3}{Case 3}
+\newtheorem*{hps-case-4}{Case 4}
+\newtheorem*{hps-case-5}{Case 5}
+\newtheorem*{hps-case-6}{Case 6}
+\newtheorem*{hps-case-7}{Case 7}
+\newtheorem*{hps-case-8}{Case 8}
+\newtheorem*{hps-case-9}{Case 9}
+\newtheorem*{hps-case-10}{Case 10}
+\newtheorem*{hps-case-11}{Case 11}
+
 \newtheorem{hi}[hps]{Lemma}
 \newtheorem{huot}[hps]{Lemma}
 \newtheorem{hcf}[hps]{Lemma}
@@ -14,11 +26,7 @@
 \newtheorem{scf}[sps]{Lemma}
 \begin{document}
 \section{Haskell}
-Progress will be proven first.  
 \input{hps.tex}
-\input{hi.tex}
-\input{huot.tex}
-\input{hcf.tex}
 \section{ML}
 \input{mps.tex}
 \input{mi.tex}
