--- a/proof/suot.tex
+++ b/proof/suot.tex
@@ -2,6 +2,6 @@
 \label{suot}
 If $\Gamma\vdash_{S}e_{S}:T_{1}$ and $\Gamma\vdash_{S}e_{S}:T_{2}$ then $T_{1}=T_{2}$.
 \begin{proof}
-Straightforward structural induction on $e_{S}$ using the appropriate clause of Lemma \ref{sil} for each case.
+Straightforward structural induction on $e_{S}$ using the appropriate clause of Lemma \ref{si} for each case.
 \end{proof}
 \end{suot}
