--- a/model/hct.tex
+++ b/model/hct.tex
@@ -2,7 +2,7 @@
 \onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
-$e_{H}$ & $=$ & $x\;\vert\;e_{H}\;e_{H}\;\vert\;e_{H}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{H}\;e_{H}\;e_{H}\;\vert\;o\;e_{H}\;e_{H}\;\vert\;f\;e_{H}\;\vert\;\mathtt{fix}\;e_{H}$ \\
+$e_{H}$ & $=$ & $x\;\vert\;v_{H}\;\vert\;e_{H}\;e_{H}\;\vert\;e_{H}\;\lbrace T\rbrace\;\vert\;\mathtt{if0}\;e_{H}\;e_{H}\;e_{H}\;\vert\;o\;e_{H}\;e_{H}\;\vert\;f\;e_{H}\;\vert\;\mathtt{fix}\;e_{H}$ \\
 $v_{H}$ & $=$ & $\lambda x:T.e_{H}\;\vert\;\Lambda X.e_{H}\;\vert\;\mathtt{cons}\;e_{H}\;e_{H}\;\vert\;\mathtt{nil}\;\vert\;\overline{n}$ \\
 $x$ & $=$ & Variables \\
 $o$ & $=$ & $\mathtt{+}\;\vert\;\mathtt{-}$ \\
