--- a/proof/muot.tex
+++ b/proof/muot.tex
@@ -2,6 +2,6 @@
 \label{muot}
 If $\Gamma\vdash_{M}e_{M}:T_{1}$ and $\Gamma\vdash_{M}e_{M}:T_{2}$ then $T_{1}=T_{2}$.
 \begin{proof}
-Straightforward structural induction on $e_{M}$ using the appropriate clause of Lemma \ref{mil} for each case.
+Straightforward structural induction on $e_{M}$ using the appropriate clause of Lemma \ref{mi} for each case.
 \end{proof}
 \end{muot}
