--- a/model/hit.tex
+++ b/model/hit.tex
@@ -2,13 +2,10 @@
 \begin{center}
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;e_{M}\;\vert\;^{T}HS\;e_{S}$ \\
+$v_{M}$ & $=$ & $\cdots\;\vert\;^{L}HS\;v_{S}\;\vert\;^{\forall X.T}HS\;v_{S}$ \\
 $T$ & $=$ & $\cdots\;\vert\;L\;\vert\;T^{a}$ \\
 $a$ & $=$ & Type annotations (a, b, \ldots) \\
 $E_{H}$ & $=$ & $\cdots\;\vert\;^{T}HM^{T}\;E_{M}\;\vert\;^{T}HS\;E_{S}$
-%&& $\mathtt{if0}\;(^{T}MH^{T}\;E_{H})\;t_{M}\;t_{M}\;\vert\;\mathtt{if0}\;(SH^{T}\;E_{H})\;t_{S}\;t_{S}$ \\
-%&& $\vert\;o\;(^{T}MH^{T}\;E_{H})\;t_{M}\;\vert\;o\;v_{M}\;(^{T}MH^{T}\;E_{H})$ \\
-%&& $\vert\;o\;(SH^{T}\;E_{H})\;t_{S}\;\vert\;o\;v_{S}\;(SH^{T}\;E_{H})$ \\
-%&& $\vert\;f\;(^{T}MH^{T}\;E_{H})\;\vert\;f\;(SH^{T}\;E_{H})$
 \end{tabular}
 \end{center}
 \caption{Haskell interoperation terms}
