--- a/proof/proof.tex
+++ b/proof/proof.tex
@@ -1,6 +1,6 @@
 \documentclass[12pt]{article}
 \usepackage{amsmath, amsthm, amssymb}
-\newtheorem{hps}{Thorem}[section]
+\newtheorem{hps}{Theorem}[section]
 \newtheorem*{hps-case-1}{Case 1}
 \newtheorem*{hps-case-2}{Case 2}
 \newtheorem*{hps-case-3}{Case 3}
@@ -12,15 +12,23 @@
 \newtheorem*{hps-case-9}{Case 9}
 \newtheorem*{hps-case-10}{Case 10}
 \newtheorem*{hps-case-11}{Case 11}
+\newtheorem*{hps-case-12}{Case 12}
+\newtheorem*{hps-case-13}{Case 13}
+\newtheorem*{hps-case-13-1}{Case 13.1}
+\newtheorem*{hps-case-13-2}{Case 13.2}
+\newtheorem*{hps-case-13-3}{Case 13.3}
+\newtheorem*{hps-case-13-4}{Case 13.4}
+\newtheorem*{hps-case-13-5}{Case 13.5}
+\newtheorem*{hps-case-13-6}{Case 13.6}
 
 \newtheorem{hi}[hps]{Lemma}
 \newtheorem{huot}[hps]{Lemma}
 \newtheorem{hcf}[hps]{Lemma}
-\newtheorem{mps}{Thorem}[section]
+\newtheorem{mps}{Theorem}[section]
 \newtheorem{mi}[mps]{Lemma}
 \newtheorem{muot}[mps]{Lemma}
 \newtheorem{mcf}[mps]{Lemma}
-\newtheorem{sps}{Thorem}[section]
+\newtheorem{sps}{Theorem}[section]
 \newtheorem{si}[sps]{Lemma}
 \newtheorem{suot}[sps]{Lemma}
 \newtheorem{scf}[sps]{Lemma}
