--- a/model/hios.tex
+++ b/model/hios.tex
@@ -11,7 +11,7 @@ $\mathscr{E}[^{N}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{N}HS\;(\mathtt
 && $(v_{S}\neq\overline{n}$ for any $\overline{n})$ \\
 $\mathscr{E}[(^{\forall X.T_{1}}HS\;v_{S})\;\lbrace T_{2}\rbrace]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}HS\;v_{S}]$ \\
 $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\lambda x_{1}.e_{S})]_{H}$ & $\rightarrow$ & $\mathscr{E}[\lambda x_{2}:T_{1}[T_{i}/T^{a}_{i}].(^{T_{2}}HS\;((\lambda x_{1}.e_{S})\;(SH^{T_{1}}\;x_{2})))]$ \\
-$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;function"})]$ \\
+$\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T_{1}\rightarrow T_{2}}HS\;(\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"})]$ \\
 && $(v_{S}\neq\lambda x.e_{S}$ for any $x,e_{S})$ \\
 $\mathscr{E}[^{T^{a}}HS\;(SH^{T^{a}}\;e_{H})]_{H}$ & $\rightarrow$ & $\mathscr{E}[e_{H}]$ \\
 $\mathscr{E}[^{T^{a}}HS\;v_{S}]_{H}$ & $\rightarrow$ & $\mathscr{E}[^{T^{a}}HS\;(\mathtt{wrong}\;\mathrm{``Parametricity\;violated"})]$ \\
