--- a/model/scos.tex
+++ b/model/scos.tex
@@ -3,7 +3,7 @@
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[(\lambda x.e_{S})\;v_{S}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}[x/v_{S}]]$ \\
-$\mathscr{E}[v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;function"}]$ \\
+$\mathscr{E}[v_{S}^{1}\;v_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\mathtt{wrong}\;\mathrm{``Not\;a\;procedure"}]$ \\
 && $(v_{S}^{1}\neq\lambda x.e_{S}$ for any $x,e_{S})$ \\
 $\mathscr{E}[\mathtt{if0}\;\overline{0}\;e_{S}^{1}\;e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{1}]$ \\
 $\mathscr{E}[\mathtt{if0}\;v_{S}\;e_{S}^{1}\;e_{S}^{2}]_{S}$ & $\rightarrow$ & $\mathscr{E}[e_{S}^{2}]\;(v_{S}\neq\overline{0})$ \\
